[project]
name = "comfyui-crystools-save"
description = "With this quality of life extension, you can save your workflow with a specific name and include additional details such as the author, a description, and the version (in metadata/json). Important: When you share your workflow (via png/json), others will be able to see your information!"
version = "1.2.3"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/crystian/ComfyUI-Crystools-save"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "crystian"
DisplayName = "ComfyUI-Crystools-save"
Icon = "https://raw.githubusercontent.com/crystian/ComfyUI-Crystools/main/docs/screwdriver.png"
